fix navbar overflowing issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,8 +27,12 @@ body {
 } */
 
 html {
-  @apply scroll-smooth overflow-hidden;
+  @apply scroll-smooth;
 }
+
+/* body {
+  @apply overflow-x-hidden;
+} */
 
 @layer utilities {
   .clip-tilt {
